feat: Implement Better Auth (#8)
* feat: Add Better Auth package and update environment configuration

* feat: Integrate Drizzle ORM for PostgreSQL and update database with auth schema

* feat: Implement authentication routes using Better Auth

* feat: Add auth-client module for Better Auth integration

* feat: Implement middleware for session authentication using Better Auth

* feat: Enable github provider in Better auth

* feat: Add google oauth in better auth configuration

* feat: Create ChatPage

* feat: Add LoginPage components with login functionality

* feat: Add Logout component and integrate it into the Header

* feat: Enhance LoginPage to redirect authenticated users to the homepage

* fix: Update telemetry run name to use dynamic model value

* refactor: Update session handling in LoginPage to use new auth API

* fix: Update middleware to redirect unauthenticated users to the login page

* feat: Replace Logout component with Profile in Header and enhance Logout functionality

* feat: Configure remote image patterns in Next.js

* feat: Implement Profile dropdown

* feat: Integrate userId in telemetry metadata

* feat: Add Docker Compose configuration for PostgreSQL service

* chore: Enhance README for local development setup

* fix: Update logout functionality to redirect to homepage

* feat: Refactor chat page structure and update middleware matcher for dynamic routing

* feat: Enhance ChatInput component to handle dynamic routing and submission logic

* feat: Update authentication flow to support redirecting users after login

* feat: Integrate initial prompt state management and update ChatInput component for dynamic input handling

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,27 @@
+# Base URL
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# AI Gateway
-AIMLAPI_API_KEY="..."
-AI_GATEWAY_API_KEY="vck_..."
+# AI Gateway - Get your API keys from the respective providers
+AIMLAPI_API_KEY=your_aimlapi_key_here
+AI_GATEWAY_API_KEY=vck_your_vercel_ai_gateway_key_here
 
-# Telemetry Observability with Langsmith(optional)
-LANGSMITH_TRACING="true"
-LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
-LANGSMITH_API_KEY="lsv2..."
-LANGSMITH_PROJECT="default"
+# Authentication - Generate a secure secret
+BETTER_AUTH_SECRET=your_secure_random_secret_here
+BETTER_AUTH_URL=http://localhost:3000
+
+# GitHub OAuth (optional) - Create an OAuth app at https://github.com/settings/applications/new
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+
+# Google OAuth (optional) - Create credentials at https://console.developers.google.com/
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Database
+DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+
+# Telemetry Observability with Langsmith (optional)
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_API_KEY=lsv2_your_langsmith_api_key
+LANGSMITH_PROJECT=default
